# single-winner-generative-social-choice

./: .gitignore  COMPLETION_SUMMARY.md  HANDOFF.md  PERFORMANCE_IMPROVEMENTS.md  QUICKSTART.md  README.md  bridging_table.tex  check_degeneracy.py  cycle_analysis.md  debug_prefs.py  email.txt  extract_cycle_statements.py  generate_all_reports.sh  generate_all_tables.sh  generate_degeneracy_report.py  generate_statements_only.py  generate_timestamped_reports.sh  monitor_production.sh  pyproject.toml  reference.ts  results_table.tex  results_table_with_summaries.tex  run_all_experiments.sh  run_complete_test.sh  run_model_comparison.sh  run_production_gpt5nano.sh  topic_mappings.json  topics.txt
reports/: chunked_borda_insertion_report.md  epsilon_fix_plan.md  epsilon_fixing_deferred.md  fix_invalid_voters_plan.md  gpt_double_star_epsilon_inconsistency.md  insertion_method_comparison_report.md  master_plan.md  methodology.md  methodology_narrative.md  model_configuration_audit.md  outline_methodology.md  preference_degeneracy_report.md  prompt_documentation.md  sampling-alt-voter-HANDOFF.md  sampling_experiment_report.md
scripts/: cleanup_gpt_star_results.py  estimate_costs.py  fix_double_star_epsilons.py  fix_electoral_double_star.py  generate_cluster_histogram.sh  generate_cluster_report.sh  generate_epsilon_100_cdf.py  generate_epsilon_100_plots.sh  generate_paper_plots.py  generate_plots.sh  generate_slide_plots.py  generate_vbc_highlight_plot.py  generate_winner_biggest_cluster_table.sh  migrate_clustered_structure.py  monitor_production.sh  rerun_gpt_methods.py  (+15 more)
(+22963 files in other folders)
