[project]
name = "single-winner-generative-social-choice"
version = "0.1.0"
description = "Social choice experiment pipeline using generative AI"
requires-python = ">=3.11"
dependencies = [
    "votekit>=1.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

