[project]
name = "single-winner-generative-social-choice"
version = "0.1.0"
description = "Social choice experiment pipeline using generative AI"
requires-python = ">=3.11"
dependencies = [
    "votekit>=1.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "datasets>=2.0.0",
    "matplotlib>=3.0.0",
    "numpy>=1.20.0",
    "tqdm>=4.0.0",
    "tenacity>=8.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "seaborn>=0.12.0",
    "pvc-toolbox",
    "scikit-learn>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
pvc-toolbox = { git = "https://github.com/jeqcho/pvc-toolbox.git" }

